--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,12 @@
 [package]
 name = "tower-sessions-firestore-store"
 description = "tower-sessions store using Cloud Firestore"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = ["Brint E. Kriebel, At the Tavern <brint@tavern.at>"]
 license = "MIT"
 homepage = "https://github.com/AtTheTavern/tower-sessions-firestore-store"
-keywords = [
-  "axum",
-  "session",
-  "sessions",
-  "cookie",
-  "tower",
-  "firestore",
-  "google-cloud"
-]
+keywords = ["axum", "sessions", "tower", "firestore", "google-cloud"]
 categories = ["asynchronous", "network-programming", "web-programming"]
 repository = "https://github.com/AtTheTavern/tower-sessions-firestore-store"
 documentation = "https://docs.rs/tower-sessions-firestore-store"
