--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,11 @@ async-trait = "0.1"
 chrono = { version = "0.4", features = ["serde"] }
 firestore = "0.39"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.113"
 thiserror = "1.0"
+time = "0.3"
 tower-sessions-core = "0.10"
+uuid = "1.7.0"
 
 [dev-dependencies]
 axum = "0.7"
